# open5gs

./: .gitignore
lib/: meson.build
lib/coding/: decoding.c  decoding.h  encoding.c  encoding.h  meson.build  metrics.c  metrics.h
lib/ran/: context.c  context.h  meson.build  ogs-ran-common.c  ogs-ran-common.h  ogs-ran-rach.h  ogs-ran-rrc.h
src/: meson.build
src/amf/: gmm-handler.c  gmm-sm.c
src/layer2/: context.h  l2_layer.h
src/ran/: authentication.c  context.h  info Michal.c  meson.build  ogs-ran-common.c  ogs-ran-common.h  rach_procedure.c  registration_accept.c  registration_accept.h  registration_request.c  registration_request.h  registration_request_accept.c  registration_request_accept.h  rrc.h  rrc.reconfiguration.c  rrc_establishment.c  rrc_establishment_ver2.c  rrc_reconfiguration.c  rrc_reconfiguration_ver2.c  rrc_ver2.h  substitute_AMF.c  substitute_AMF.h
src/smf/: context.h
tests/: meson.build
tests/coding/: abts-main.c  crc-decoding-tests.c  crc-encoding-tests.c  meson.build
tests/rach/: abts-main.c  meson.build  rach-test.c
tests/ran/: abts-main.c  common-test.c  context-test.c  meson.build  rrc_reconfiguration-test.c
tests/rrc/: abts-main.c  meson.build  rrc_establishment-test.c  rrc_reconfiguration-test.c
tests/smf/: abts-main.c  meson.build  smf-bearer-tft-update-test.c
tests/unit/: meson.build  test_rrc_authentication.c
